--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7a75ff">  <td>25/04/24 22:19:08</td>   <td>0</td> <td title="&gt;&gt;Reports.SetupReport()[pri:0, instance:com.creatio.crm.application.tests.BaseTest@1bb5a082]">&gt;&gt;SetupReport</td> 
+<tr bgcolor="7a75ff">  <td>25/05/04 08:06:40</td>   <td>0</td> <td title="&gt;&gt;Reports.SetupReport()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;SetupReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>25/04/24 22:19:11</td>   <td>2347</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@38425407]">&gt;&gt;initializeWeDriverdetails</td> 
+<tr bgcolor="a9ada3">  <td>25/05/04 08:06:58</td>   <td>18039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;initializeWeDriverdetails</td> 
 <td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>25/04/24 22:19:09</td>   <td>773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@38425407]">&gt;&gt;setupbrowser</td> 
+<tr bgcolor="a9ada3">  <td>25/05/04 08:06:58</td>   <td>18039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;initializeWeDriverdetails</td> 
 <td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="9b6b76">  <td>25/04/24 22:19:18</td>   <td>9965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@38425407]">&lt;&lt;tearDownBrowser</td> 
+<tr bgcolor="647d63">  <td>25/05/04 08:06:57</td>   <td>16905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;setupbrowser</td> 
 <td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="f9896d">  <td>25/04/24 22:19:11</td>   <td>2386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verufySignupforNewuserAccount(java.lang.String,java.lang.String)[pri:11, instance:com.creatio.crm.application.tests.AplicationTest@38425407]">verufySignupforNewuserAccount</td> 
+<tr bgcolor="647d63">  <td>25/05/04 08:06:57</td>   <td>16905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;setupbrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/04 08:07:03</td>   <td>23528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/04 08:07:03</td>   <td>23528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="7c8faf">  <td>25/05/04 08:06:58</td>   <td>18045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verifySigninPage(java.lang.String,java.lang.String,java.lang.String)[pri:13, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">verifySigninPage</td> 
+  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="7c8faf">  <td>25/05/04 08:06:58</td>   <td>18045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verifySigninPage(java.lang.String,java.lang.String,java.lang.String)[pri:13, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">verifySigninPage</td> 
   <td>main@918221580</td>   <td></td> </tr>
 </table>
