--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f8c73">  <td>25/05/02 19:59:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@639c2c1d]">&gt;&gt;initializeWeDriverdetails</td> 
+<tr bgcolor="9f8c73">  <td>25/05/27 20:35:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&gt;&gt;initializeWeDriverdetails</td> 
 <td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="719efb">  <td>25/05/02 19:59:12</td>   <td>55</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@639c2c1d]">&lt;&lt;tearDownBrowser</td> 
+<tr bgcolor="719efb">  <td>25/05/27 20:35:09</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&lt;&lt;tearDownBrowser</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d96b9e">  <td>25/05/02 19:59:12</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verufySignupforNewuserAccount(java.lang.String,java.lang.String)[pri:11, instance:com.creatio.crm.application.tests.AplicationTest@639c2c1d]">verufySignupforNewuserAccount</td> 
+<tr bgcolor="d96b9e">  <td>25/05/27 20:35:09</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verifyCookieContentDisplayed(java.lang.String)[pri:2, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">verifyCookieContentDisplayed</td> 
   <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="e7aac8">  <td>25/05/02 19:59:11</td>   <td>-1038</td> <td title="&gt;&gt;Reports.SetupReport()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@639c2c1d]">&gt;&gt;SetupReport</td> 
+<tr bgcolor="719efb">  <td>25/05/27 20:35:09</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="719efb">  <td>25/05/27 20:35:09</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>25/05/27 20:35:08</td>   <td>-758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.VerifyCookieHeaderisDisplayed()[pri:1, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">VerifyCookieHeaderisDisplayed</td> 
+  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>25/05/27 20:35:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&gt;&gt;initializeWeDriverdetails</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>25/05/27 20:35:09</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.creatioLogoCookieBotLogoDisplayed()[pri:4, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">creatioLogoCookieBotLogoDisplayed</td> 
+  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="e7aac8">  <td>25/05/27 20:35:07</td>   <td>-1097</td> <td title="&gt;&gt;Reports.SetupReport()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&gt;&gt;SetupReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>25/05/27 20:35:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&gt;&gt;initializeWeDriverdetails</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="9f8c73">  <td>25/05/27 20:35:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&gt;&gt;initializeWeDriverdetails</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="719efb">  <td>25/05/27 20:35:09</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="d96b9e">  <td>25/05/27 20:35:09</td>   <td>-6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verifyCookiepopupbtnDisplayed()[pri:3, instance:com.creatio.crm.application.tests.AplicationTest@765d7657]">verifyCookiepopupbtnDisplayed</td> 
+  <td>main@918221580</td>   <td></td> </tr>
 </table>
