--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,22 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7a75ff">  <td>25/05/04 08:06:40</td>   <td>0</td> <td title="&gt;&gt;Reports.SetupReport()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;SetupReport</td> 
+<tr bgcolor="7a75ff">  <td>25/05/27 20:36:20</td>   <td>0</td> <td title="&gt;&gt;Reports.SetupReport()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;SetupReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="a9ada3">  <td>25/05/04 08:06:58</td>   <td>18039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;initializeWeDriverdetails</td> 
-<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="a9ada3">  <td>25/05/04 08:06:58</td>   <td>18039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;initializeWeDriverdetails</td> 
-<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>25/05/04 08:06:57</td>   <td>16905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;setupbrowser</td> 
-<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>25/05/04 08:06:57</td>   <td>16905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&gt;&gt;setupbrowser</td> 
-<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>25/05/04 08:07:03</td>   <td>23528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&lt;&lt;tearDownBrowser</td> 
-<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>25/05/04 08:07:03</td>   <td>23528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">&lt;&lt;tearDownBrowser</td> 
-<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>25/05/04 08:06:58</td>   <td>18045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verifySigninPage(java.lang.String,java.lang.String,java.lang.String)[pri:13, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">verifySigninPage</td> 
+<tr bgcolor="7c8faf">  <td>25/05/27 20:36:24</td>   <td>3834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.VerifyCookieHeaderisDisplayed()[pri:1, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">VerifyCookieHeaderisDisplayed</td> 
   <td>main@918221580</td>   <td></td> </tr>
-<tr bgcolor="7c8faf">  <td>25/05/04 08:06:58</td>   <td>18045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verifySigninPage(java.lang.String,java.lang.String,java.lang.String)[pri:13, instance:com.creatio.crm.application.tests.AplicationTest@74235045]">verifySigninPage</td> 
+<tr bgcolor="7c8faf">  <td>25/05/27 20:36:37</td>   <td>16580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.creatioLogoCookieBotLogoDisplayed()[pri:4, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">creatioLogoCookieBotLogoDisplayed</td> 
+  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="a9ada3">  <td>25/05/27 20:36:37</td>   <td>16560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;initializeWeDriverdetails</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="a9ada3">  <td>25/05/27 20:36:37</td>   <td>16560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;initializeWeDriverdetails</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="a9ada3">  <td>25/05/27 20:36:37</td>   <td>16560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;initializeWeDriverdetails</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="a9ada3">  <td>25/05/27 20:36:37</td>   <td>16560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initializeWeDriverdetails()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;initializeWeDriverdetails</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/27 20:36:36</td>   <td>15513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;setupbrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/27 20:36:36</td>   <td>15513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;setupbrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/27 20:36:36</td>   <td>15513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;setupbrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/27 20:36:36</td>   <td>15513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setupbrowser(java.lang.String)[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&gt;&gt;setupbrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/27 20:36:40</td>   <td>20343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/27 20:36:40</td>   <td>20343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/27 20:36:40</td>   <td>20343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>25/05/27 20:36:40</td>   <td>20343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDownBrowser()[pri:0, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">&lt;&lt;tearDownBrowser</td> 
+<td>&nbsp;</td>  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="7c8faf">  <td>25/05/27 20:36:28</td>   <td>8415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verifyCookieContentDisplayed(java.lang.String)[pri:2, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">verifyCookieContentDisplayed</td> 
+  <td>main@918221580</td>   <td></td> </tr>
+<tr bgcolor="7c8faf">  <td>25/05/27 20:36:33</td>   <td>12449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AplicationTest.verifyCookiepopupbtnDisplayed()[pri:3, instance:com.creatio.crm.application.tests.AplicationTest@30c15d8b]">verifyCookiepopupbtnDisplayed</td> 
   <td>main@918221580</td>   <td></td> </tr>
 </table>
